# minesweeper-solver

./: CMakeLists.txt
include/: map.h  tile.h
src/: main.cpp  map.cpp  tile.cpp
